--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "@mui/material": "^6.1.3",
     "@mui/styled-engine-sc": "^6.1.3",
     "@reduxjs/toolkit": "^2.3.0",
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.8.0",
     "firebase": "^10.14.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -23,6 +25,7 @@
     "react-router-dom": "^6.26.2",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "stripe": "^17.2.1",
     "styled-components": "^6.1.13",
     "vite-plugin-require": "^1.2.14"
   },
